frontend/web/css/index.css
/* ... */
.cover .navbar .navbar-toggle .icon-bar {
    background-color: #000000;
}

.cover .navbar.navbar-inverse .navbar-toggle {
    border-color: transparent;
}

.cover .navbar.navbar-inverse .navbar-toggle:hover,
.cover .navbar.navbar-inverse .navbar-toggle:focus {
    background-color: transparent;
}

.cover .navbar.navbar-inverse .navbar-toggle .icon-bar {
    background-color: #ffffff;
}

.cover .cover-image {
    z-index: -1;
    position: absolute;
    top: 0px;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
}

.cover .cover-image.background-image-fixed,
.cover .cover-image.cover-image-fixed {
    background-attachment: fixed;
}

.navbar-fixed-top.navbar .dropdown .dropdown-toggle,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:active,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:focus,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:hover,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:visited {
    background-color: #cacaf4;
}

.navbar-fixed-top.navbar .dropdown .dropdown-toggle,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:focus,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:active,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:visited,
.navbar-fixed-top.navbar .dropdown .dropdown-toggle:hover {
    color: #000000;
}

.navbar-inverse .navbar-collapse,
.navbar-inverse .navbar-form {
    border-top: none;
}

.navbar-inverse .navbar-toggle {
    border-color: #dddddd;
    background-color: transparent;
}

.navbar-inverse .navbar-toggle:hover,
.navbar-inverse .navbar-toggle:active,
.navbar-inverse .navbar-toggle:visited,
.navbar-inverse .navbar-toggle:focus {
    background-color: #dddddd;
}

.navbar-inverse .navbar-toggle .icon-bar {
    background-color: #888888;
}

.container .site-error {
    width: 100%;
    max-width: 600px;
    margin: auto;
    text-align: center;
}

@media (min-width: 1017px) {
    .container.index-button {
        padding-right: 0px;
    }
}

@media (max-width: 767px) {
    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover,
    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:focus {
        color: #9d9d9d;
    }
    .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
        background-color: transparent;
    }
}

.just-for-employers-wrapper,
.just-registered-wrapper {
    width: 100%;
    top: 0;
    padding-top: 32%;
    z-index: 1000;
    overflow: hidden;
    position: absolute;
    height: 2000px;
    background-color: rgba(250, 253, 255, 0.932);
}

.not-registered-wrapper {
    width: 100%;
    top: 0;
    padding-top: 20%;
    z-index: 1000;
    overflow: hidden;
    position: absolute;
    height: 2000px;
}

.not-registered-wrapper.advert-application {
    left: 0;
    padding-top: 15%;
}

.just-for-employers,
.just-registered {
    position: relative;
    z-index: 10000;
    margin: auto;
    width: 340px;
    padding: 20px;
    background-color: #929292;
    margin: auto;
    color: white;
    text-align: center;
    font-size: 14px;
    line-height: 1.42857143;
}

.not-registered {
    position: relative;
    z-index: 10000;
    margin: auto;
    width: 480px;
    padding-top: 33px;
    min-height: 160px;
    background-color: #e6e6fa;
    font-weight: bold;
    text-align: center;
    font-family: 'Work Sans', sans-serif;
    font-size: 14px;
    line-height: 1.42857143;
    left: 0;
}

.just-registered .close-img {
    width: 30px;
    height: 30px;
    position: relative;
    z-index: 1000000;
    margin-top: -35px;
    float: right;
    cursor: pointer;
}

.just-registered .close-img img {
    width: 30px;
    height: 30px;
}

.not-registered .close-img {
    width: 30px;
    height: 30px;
    position: relative;
    z-index: 1000000;
    margin-top: -35px;
    float: right;
    cursor: pointer;
}

.not-registered img {
    width: 30px;
    height: 30px;
}

@media (max-width: 991px) {
    .just-for-employers-wrapper,
    .just-registered-wrapper {
        height: 3000px;
    }
}

@media (max-width: 400px) {
    .just-for-employers,
    .just-registered {
        margin-top: 50px;
        width: 240px;
    }
}

@media (max-width: 600px) {
    .not-registered {
        top: 100px;
        width: 100%;
    }
}


/* BANNER STYLES */

a.banner img {
    width: 100% !important;
    max-height: 200px;
    min-height: 60px;
}

.banner-top,
.banner-bottom {
    background: white;
}

img.thumbnail.banner {
    margin-bottom: 0px;
}

.container-header {
    padding: 20px;
    background: ghostwhite !important;
}

footer.section.section-success {
    padding-top: 0px;
}

.container-footer {
    padding-bottom: 20px;
    padding-top: 20px;
}


/* subscribe footer */

.main-search.subscribe-footer {
    background-image: none;
    background: rgb(230, 230, 250);
    padding-top: 20px;
    padding-bottom: 1em;
    min-height: auto;
}

.subscribe-icon {
    position: absolute;
    color: #999;
    top: 10px;
    left: 2em;
}

.subscribe-input {
    padding-left: 40px !important;
}

.field-subscribeform-email .help-block {
    display: none;
}


/* OVERRIDEN STYLES */

.no-margin {
    margin: 0px;
}

.field-registerform-dialcode,
.field-registerform-phone {
    display: inline-block;
}

.field-registerform-usertype {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

#registerform-usertype label {
    width: auto;
    display: inline-block;
    margin-left: 30px;
}

.field-registerform-usertype .control-label {
    width: auto !important;
    float: left;
    display: inline-block;
}


/* Password checker start */

.password-checker {
    position: absolute;
    z-index: 10000;
    background: white;
    width: 90%;
    padding: 20px;
    text-align: left;
    border: 1px solid lightgray;
    outline: 1px solid darkgray;
    display: none;
}
/* ... */

